Feat: 수정된 DTO 반영해서 FriendService 코드 수정